# gray_platinum_pelican

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
apps/: CMakeLists.txt
apps/largestProdOfThreeApp/: CMakeLists.txt  inputs.cpp  main.cpp
apps/largest_prod/: CMakeLists.txt  inputs.hpp  main.cpp
cmake/: config.cmake  gtest.cmake  options.cmake
libraries/: CMakeLists.txt
libraries/questions/: CMakeLists.txt
libraries/questions/largestProdOfThree/: CMakeLists.txt  README.md
libraries/questions/largestProdOfThree/include/questions/largestProdOfThree/: brute_force_method.hpp  common.hpp  queue_method.hpp
libraries/questions/largestProdOfThree/src/: CMakeLists.txt  brute_force_method.cpp  queue_method.cpp  sort_method.cpp
libraries/questions/largestProdOfThree/tests/: CMakeLists.txt
libraries/questions/largestProdOfThree/tests/benchmarks/: CMakeLists.txt  benchmark_methods.cpp
libraries/questions/largestProdOfThree/tests/units/: CMakeLists.txt  brute_force_method.cpp  sort_method.cpp
libraries/questions/largest_three/: CMakeLists.txt
libraries/questions/largest_three/include/questions/largest_three/: sort_method.hpp
libraries/questions/largest_three/src/: CMakeLists.txt  queue_method.cpp  sort_method.cpp
libraries/questions/largest_three/tests/: CMakeLists.txt
libraries/questions/largest_three/tests/units/: sort_method.cpp
